fixed intro image being too big and overflowing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -182,7 +182,7 @@ footer {
 }
 
 #intro-img {   
-    height: 890px;
+    height: 100%;
     margin-right: 30px;
 /*    max-height: 700px;*/
 }
